--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/node": "^22.13.1",
+    "bits-ui": "^0.22.0",
     "eslint": "^9.19.0",
     "eslint-plugin-svelte": "^2.46.1",
     "svelte": "^5.0.0",
@@ -30,5 +32,12 @@
     "onlyBuiltDependencies": [
       "esbuild"
     ]
+  },
+  "dependencies": {
+    "clsx": "^2.1.1",
+    "lucide-svelte": "^0.475.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwind-variants": "^0.3.1",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
