feat: add auth screen

--- a/package.json
+++ b/package.json
@@ -11,14 +11,25 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
+  "dependencies": {
+    "clsx": "^2.1.1",
+    "formsnap": "^2.0.0",
+    "lucide-svelte": "^0.475.0",
+    "sveltekit-superforms": "^2.23.1",
+    "tailwind-merge": "^3.0.1",
+    "tailwind-variants": "^0.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^4.1.1",
     "@sveltejs/adapter-auto": "^4.0.0",
+    "@sveltejs/enhanced-img": "^0.4.4",
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tailwindcss/vite": "^4.0.0",
     "@types/node": "^22.13.1",
-    "bits-ui": "^0.22.0",
+    "bits-ui": "1.0.0-next.91",
     "eslint": "^9.19.0",
     "eslint-plugin-svelte": "^2.46.1",
     "svelte": "^5.0.0",
@@ -32,12 +43,5 @@
     "onlyBuiltDependencies": [
       "esbuild"
     ]
-  },
-  "dependencies": {
-    "clsx": "^2.1.1",
-    "lucide-svelte": "^0.475.0",
-    "tailwind-merge": "^3.0.1",
-    "tailwind-variants": "^0.3.1",
-    "tailwindcss-animate": "^1.0.7"
   }
 }
