--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.4.2",
+    "@tanstack/svelte-query": "^5.65.0",
     "clsx": "^2.1.1",
     "formsnap": "^2.0.0",
+    "hono": "^4.7.0",
     "lucide-svelte": "^0.475.0",
     "sveltekit-superforms": "^2.23.1",
     "tailwind-merge": "^3.0.1",
